--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     <button id="shield" class="btn">Shield</button>
   </div>
 </div>
-<script src="script.js"></script>
+<script src="script_v2.js?v=2"></script>
 </body>
 </html>
